<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vito.calculator.MainActivity">

    <Button
        android:id="@+id/plus_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginLeft="4dp"
        android:text="@string/plus"
        app:layout_constraintLeft_toRightOf="@+id/six_button"
        tools:layout_editor_absoluteY="334dp" />

    <Button
        android:id="@+id/minus_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="0dp"
        android:text="@string/minus"
        app:layout_constraintLeft_toRightOf="@+id/nine_button"
        app:layout_constraintTop_toTopOf="@+id/nine_button" />

    <Button
        android:id="@+id/backward_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="0dp"
        android:text="@string/backward"
        app:layout_constraintLeft_toRightOf="@+id/close_bracket_button"
        app:layout_constraintTop_toTopOf="@+id/close_bracket_button" />

    <Button
        android:id="@+id/pi_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="0dp"
        android:text="@string/pi"
        app:layout_constraintLeft_toRightOf="@+id/tangens_button"
        app:layout_constraintTop_toTopOf="@+id/tangens_button" />

    <Button
        android:id="@+id/pow_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="0dp"
        android:text="@string/pow_x_y"
        app:layout_constraintLeft_toRightOf="@+id/atangens_button"
        app:layout_constraintTop_toTopOf="@+id/atangens_button" />

    <Button
        android:id="@+id/button11"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="0dp"
        android:text="Button"
        app:layout_constraintBottom_toTopOf="@+id/zero_button"
        app:layout_constraintLeft_toLeftOf="@+id/zero_button" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="331dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/text_view_border"
        android:elevation="3dp"
        android:paddingRight="5dp"
        android:paddingTop="11dp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/computationTextView"
        android:layout_width="331dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/text_view_border"
        android:elevation="3dp"
        android:paddingRight="5dp"
        android:paddingTop="11dp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTextView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/zero_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="20dp"
        android:text="@string/digit_zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/dot_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="0dp"
        android:text="@string/dot"
        app:layout_constraintLeft_toRightOf="@+id/zero_button"
        app:layout_constraintTop_toTopOf="@+id/zero_button" />

    <Button
        android:id="@+id/computate_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="0dp"
        android:text="@string/computate"
        app:layout_constraintLeft_toRightOf="@+id/dot_button"
        app:layout_constraintTop_toTopOf="@+id/dot_button" />

    <Button
        android:id="@+id/divide_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="0dp"
        android:text="@string/divide"
        app:layout_constraintLeft_toRightOf="@+id/computate_button"
        app:layout_constraintTop_toTopOf="@+id/computate_button" />

    <Button
        android:id="@+id/one_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="-2dp"
        android:text="@string/digit_one"
        app:layout_constraintBottom_toTopOf="@+id/zero_button"
        app:layout_constraintLeft_toLeftOf="@+id/zero_button" />

    <Button
        android:id="@+id/four_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="0dp"
        android:text="@string/digit_four"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintLeft_toLeftOf="@+id/zero_button" />

    <Button
        android:id="@+id/seven_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="0dp"
        android:text="@string/digit_seven"
        app:layout_constraintBottom_toTopOf="@+id/four_button"
        app:layout_constraintLeft_toLeftOf="@+id/four_button" />

    <Button
        android:id="@+id/sqrt_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="0dp"
        android:text="@string/sqrt"
        app:layout_constraintBottom_toTopOf="@+id/seven_button"
        app:layout_constraintLeft_toLeftOf="@+id/seven_button" />

    <Button
        android:id="@+id/cosinus_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="0dp"
        android:text="@string/cosinus"
        app:layout_constraintBottom_toTopOf="@+id/sqrt_button"
        app:layout_constraintLeft_toLeftOf="@+id/sqrt_button" />

    <Button
        android:id="@+id/acosinus_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="0dp"
        android:text="@string/acosinus"
        app:layout_constraintBottom_toTopOf="@+id/cosinus_button"
        app:layout_constraintLeft_toLeftOf="@+id/cosinus_button" />

    <Button
        android:id="@+id/two_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="0dp"
        android:text="@string/digit_two"
        app:layout_constraintLeft_toRightOf="@+id/one_button"
        app:layout_constraintTop_toTopOf="@+id/one_button" />

    <Button
        android:id="@+id/five_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="0dp"
        android:text="@string/digit_five"
        app:layout_constraintLeft_toRightOf="@+id/four_button"
        app:layout_constraintTop_toTopOf="@+id/four_button" />

    <Button
        android:id="@+id/eight_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="0dp"
        android:text="@string/digit_eight"
        app:layout_constraintLeft_toRightOf="@+id/seven_button"
        app:layout_constraintTop_toTopOf="@+id/seven_button" />

    <Button
        android:id="@+id/open_bracket_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="0dp"
        android:text="@string/close_bracket"
        app:layout_constraintLeft_toRightOf="@+id/sqrt_button"
        app:layout_constraintTop_toTopOf="@+id/sqrt_button" />

    <Button
        android:id="@+id/sinus_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="0dp"
        android:text="@string/sinus"
        app:layout_constraintLeft_toRightOf="@+id/cosinus_button"
        app:layout_constraintTop_toTopOf="@+id/cosinus_button" />

    <Button
        android:id="@+id/asinus_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="0dp"
        android:text="@string/asinus"
        app:layout_constraintLeft_toRightOf="@+id/acosinus_button"
        app:layout_constraintTop_toTopOf="@+id/acosinus_button" />

    <Button
        android:id="@+id/three_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="0dp"
        android:text="@string/digit_three"
        app:layout_constraintLeft_toRightOf="@+id/two_button"
        app:layout_constraintTop_toTopOf="@+id/two_button" />

    <Button
        android:id="@+id/six_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="0dp"
        android:text="@string/digit_six"
        app:layout_constraintLeft_toRightOf="@+id/five_button"
        app:layout_constraintTop_toTopOf="@+id/five_button" />

    <Button
        android:id="@+id/nine_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="0dp"
        android:text="@string/digit_nine"
        app:layout_constraintLeft_toRightOf="@+id/eight_button"
        app:layout_constraintTop_toTopOf="@+id/eight_button" />

    <Button
        android:id="@+id/close_bracket_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="0dp"
        android:text="@string/open_bracket"
        app:layout_constraintLeft_toRightOf="@+id/open_bracket_button"
        app:layout_constraintTop_toTopOf="@+id/open_bracket_button" />

    <Button
        android:id="@+id/tangens_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="-3dp"
        android:text="@string/tangens"
        app:layout_constraintLeft_toRightOf="@+id/sinus_button"
        app:layout_constraintTop_toTopOf="@+id/sinus_button" />

    <Button
        android:id="@+id/atangens_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="0dp"
        android:text="@string/atangens"
        app:layout_constraintLeft_toRightOf="@+id/asinus_button"
        app:layout_constraintTop_toTopOf="@+id/asinus_button" />

    <Button
        android:id="@+id/multiply_button"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="0dp"
        android:text="@string/multiply"
        app:layout_constraintLeft_toRightOf="@+id/three_button"
        app:layout_constraintTop_toTopOf="@+id/three_button" />
</android.support.constraint.ConstraintLayout>
